--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.1",
+    "cloudinary": "^1.26.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
@@ -41,6 +42,7 @@
     "save": "^2.4.0",
     "sharp": "^0.28.3",
     "supervisor": "^0.12.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "v4": "0.0.1"
   }
 }
