--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 Cloud upload images: https://cloudinary.com/
-Email: trantuantronglqd@gmail.com
-Pass: Trantuantrong29@
+Email: lethanhtin2905@gmail.com
+Pass: Tinle2905@
